# flippergotchi

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  config.example.toml  pyproject.toml  requirements.txt  run-dev.sh
.github/workflows/: ci.yml
docs/: deployment.md  final-review.md  flipper-one-implementation.md  gameplay-review.md  gen-demo-gif.js  movement-mechanic.md  packaging.md  playtest-notes.md  ui-render-through.md
docs/device/: README.md
flippergotchi/: __init__.py  __main__.py  agent.py  commands.py  config.py  gamestate.py  persistence.py  prefs.py  sanitize.py
flippergotchi/ai/: base.py  canned.py  cpu_llama.py  rkllm_npu.py  service.py
flippergotchi/core/: authz.py  bettercap.py  bluetooth.py  handshake.py  preflight.py
flippergotchi/core/wifi/: __init__.py  backends.py  capture.py  monitor.py  scan.py
flippergotchi/game/: achievements.py  analysis.py  battle.py  bestiary.py  ble.py  blebattle.py  cracking.py  doctor.py  duel.py  elements.py  encounter.py  equipment.py  food.py  gearsets.py  home.py  larder.py  ledger.py  monsters.py  moves.py  quests.py  shop.py
flippergotchi/pet/: epitaph.py  gps.py  mechanics.py  state.py
flippergotchi/view/: animations.py  badge_screen.py  battle_menu.py  battle_screen.py  blebattle_screen.py  capture_screen.py  encounter_screen.py  equip_screen.py  faces.py  feed_screen.py  flipctl.py  mascot.py  monster_art.py  screens.py  sink.py  tui.py  worn.py
packaging/: flippergotchi.service
tests/: conftest.py  test_authz.py  test_badge_screen.py  test_battle_menu.py  test_bigdesign_integration.py  test_ble.py  test_ble_tone.py  test_blebattle.py  test_cadence.py  test_capture_screen.py  test_cloud.py  test_combat_wiring.py  test_config.py  test_cracking.py  test_curve_care.py  test_dex_species.py  test_dry_run.py  test_duel.py  test_duel_odds.py  test_economy_tuning.py  test_elements.py  test_encounter.py  test_encounter_screen.py  test_food.py  test_game.py  test_gameplay_integration.py  test_gamestate.py  test_gps_clamp.py  test_handshake.py  test_hardcore.py  test_hud_polish.py  test_integration.py  test_ledger.py  test_lifecycle.py  test_live_capture.py  test_mascot.py  test_mechanics.py  test_monster_art.py  test_moves.py  test_p0_safety.py  (+17 more)
tools/: device_gray.py  gen_evolution_strip.py  gen_preview_html.py  gen_prime_sprites.py  gen_sprite.py  shoot.py
